tests/baselines/reference/undefinedSymbolReferencedInArrayLiteral1.errors.txt
==== tests/cases/compiler/undefinedSymbolReferencedInArrayLiteral1.ts (3 errors) ====
    var tokens = [{ startIndex: deltaOffset }];
                                ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'deltaOffset'.
    
    var functions = [function() {
        [1, 2, 3].NonexistantMethod();
                  ~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'NonexistantMethod' does not exist on type 'number[]'.
        anotherNonExistingMethod();
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'anotherNonExistingMethod'.
    }];
    
    